# g2o

./: .gitignore  FindG2O.cmake
chordal_scripts/: chordalize.sh  noisify_standard_1axis.sh  noisify_standard_1axis_moreT.sh  noisify_standard_2axis.sh  noisify_standard_3axis.sh  noisify_standard_all.sh  run_experiments_gn.sh  run_experiments_gn_cauchy.sh  run_experiments_gn_cauchy_dyneps.sh  run_experiments_gn_dyneps.sh  run_experiments_gn_no_guess.sh  run_experiments_gn_spanning.sh  run_experiments_lm.sh  run_experiments_lm_cauchy.sh  run_gn_cauchy_no_guess.sh  run_gn_cauchy_no_guess_dyneps.sh  run_gn_cauchy_odom.sh  run_gn_cauchy_odom_dyneps.sh  run_gn_cauchy_spanning.sh  run_gn_cauchy_spanning_dyneps.sh  run_gn_no_guess.sh  run_gn_no_guess_dyneps.sh  run_gn_odom.sh  run_gn_odom_dyneps.sh  run_gn_spanning.sh  run_gn_spanning_dyneps.sh  run_lm_cauchy_no_guess.sh  run_lm_cauchy_odom.sh  run_lm_cauchy_spanning.sh  run_lm_no_guess.sh  run_lm_odom.sh  run_lm_spanning.sh
chordal_scripts/plot_scripts/garage/plot_gn_noguess/: plot_gn_noguess_low.p  plot_gn_noguess_mid.p  plot_gn_noguess_rot.p
chordal_scripts/plot_scripts/garage/plot_gn_odom/: plot_gn_odom_low.p  plot_gn_odom_mid.p
chordal_scripts/plot_scripts/garage/plot_gn_spanning/: plot_gn_spanning_high.p  plot_gn_spanning_rot.p
chordal_scripts/plot_scripts/grid3d/plot_gn_noguess/: plot_gn_noguess_high.p  plot_gn_noguess_low.p  plot_gn_noguess_mid.p  plot_gn_noguess_rot.p
chordal_scripts/plot_scripts/grid3d/plot_gn_odom/: plot_gn_odom_rot.p
chordal_scripts/plot_scripts/grid3d/plot_gn_spanning/: plot_gn_spanning_mid.p
chordal_scripts/plot_scripts/plot_gn_noguess/: plot_gn_noguess_high.p  plot_gn_noguess_low.p  plot_gn_noguess_mid.p  plot_gn_noguess_rot.p
chordal_scripts/plot_scripts/plot_gn_odom/: plot_gn_odom_high.p  plot_gn_odom_low.p  plot_gn_odom_mid.p  plot_gn_odom_rot.p
chordal_scripts/plot_scripts/plot_gn_spanning/: generate_plots.sh  plot_gn_spanning_high.p  plot_gn_spanning_low.p  plot_gn_spanning_mid.p  plot_gn_spanning_rot.p
chordal_scripts/plot_scripts/plot_no_guess/: generate_plots.sh  plot_no_guess_high.p  plot_no_guess_low.p  plot_no_guess_mid.p  plot_no_guess_rot.p
chordal_scripts/plot_scripts/sim-5000p/plot_gn_noguess/: plot_gn_noguess_rot.p
chordal_scripts/plot_scripts/sim-5000p/plot_gn_spanning/: plot_gn_spanning_high.p  plot_gn_spanning_mid.p  plot_gn_spanning_rot.p
chordal_scripts/plot_scripts/sim-sphere/plot_gn_noguess/: plot_gn_noguess_high.p  plot_gn_noguess_mid.p  plot_gn_noguess_rot.p
chordal_scripts/plot_scripts/sim-sphere/plot_gn_odom/: plot_gn_odom_high.p  plot_gn_odom_low.p  plot_gn_odom_rot.p
chordal_scripts/plot_scripts/sim-torus3d/plot_gn_noguess/: plot_gn_noguess_high.p  plot_gn_noguess_low.p  plot_gn_noguess_mid.p  plot_gn_noguess_rot.p
chordal_scripts/plot_scripts/sim-torus3d/plot_gn_odom/: plot_gn_odom_high.p  plot_gn_odom_low.p  plot_gn_odom_mid.p
g2o/apps/: CMakeLists.txt
g2o/apps/g2o_chordal/: CMakeLists.txt  chordal_comparator.cpp  converter_chordal2geodesic.cpp  g2o_chordal_app.cpp  g2o_chordal_geodesic_comparator.cpp  inverse_chordal_converter.cpp
g2o/apps/g2o_cli/: g2o.cpp
g2o/apps/g2o_hierarchical/: backbone_tree_action.cpp  edge_creator.h  edge_labeler.cpp  g2o_hierarchical.cpp  simple_star_ops.cpp
g2o/apps/g2o_hierarchical_online/: CMakeLists.txt  g2o_hierachical_online.cpp  local_star.cpp  local_star.h
g2o/apps/g2o_matchable_simulator/: CMakeLists.txt  g2o_matchable_noise_adder.cpp  matchable_simulator_3d.cpp  matchable_world.cpp  matchable_world.h  matchable_world_simulator.cpp  matchable_world_simulator.h  test_jacobians.cpp
g2o/core/: base_binary_edge.hpp  batch_stats.cpp  batch_stats.h  eigen_types.h  hyper_graph.cpp  hyper_graph.h  optimizable_graph.cpp  sparse_optimizer.cpp
g2o/examples/: CMakeLists.txt
g2o/examples/chordal_distance/: CMakeLists.txt  chordal_comparator.cpp  chordal_converter.cpp  edge_se3_chord.cpp  edge_se3_chord.h  inverse_chordal_converter.cpp  se3_chordal.h  se3_chordal_ops.h  types_chordal_distance.cpp  types_chordal_distance.h  vertex_se3_chord.cpp  vertex_se3_chord.h
g2o/examples/grid3d/: CMakeLists.txt  create_grid3d.cpp
g2o/examples/hierachical_2/: CMakeLists.txt  test_hierarchical_2.cpp
g2o/examples/matchables/: CMakeLists.txt  edge_se3_matchable.cpp  edge_se3_matchable.h  graph_generator.cpp  graph_generator.h  matchable.cpp  matchable.h  matchable_generator.cpp  matchable_generator.h  matchable_graph_generator.cpp  matchable_simulator_3d.cpp  matchable_world.cpp  matchable_world.h  matchable_world_simulator.cpp  matchable_world_simulator.h  types_matchable.cpp  types_matchable.h  vertex_matchable.cpp  vertex_matchable.h
g2o/examples/matchables/deprecated/: graph_generator_OLD.cpp  matchable_generator.cpp  matchable_generator_OLD.cpp  matchable_generator_OLD.h  matchable_graph_generator_OLD.cpp
g2o/examples/noise_adder3d/: CMakeLists.txt  noise_adder3d.cpp
g2o/examples/torus3d/: CMakeLists.txt  create_torus3d.cpp
g2o/types/: CMakeLists.txt
g2o/types/matchables3d/: CMakeLists.txt  edge_se3_matchable.cpp  edge_se3_matchable.h  g2o_types_matchable_api.h  matchable.cpp  matchable.h  types_matchables.cpp  vertex_matchable.cpp  vertex_matchable.h
g2o/types/slam3d/: CMakeLists.txt  edge_se3_chord.cpp  edge_se3_chord.h  edge_se3_pointxyz.cpp  edge_se3_pointxyz.h  isometry3d_mappings.cpp  isometry3d_mappings.h  types_slam3d.cpp  types_slam3d.h  vertex_se3_chord.cpp  vertex_se3_chord.h
matchable_scripts/: factor_dataset.sh  guess_dataset.sh  noisify.sh  plot.p  plot_factors.p  plot_guess.p  run_experiments_lm.sh  run_experiments_lm_k.sh  run_noguess.sh  run_noguess_cauchy.sh  run_odometry.sh  run_odometry_cauchy.sh  run_spanning.sh  run_spanning_cauchy.sh  run_test_factors.sh
matchable_scripts/plot_scipts/plot_factors/: generate_plots_factors.sh  plot_factors.p  plot_factors.plt
matchable_scripts/plot_scipts/plot_guess/: generate_plots.sh  plot_all_f.p  plot_all_f.plt  plot_hom_f.p  plot_hom_f.plt  plot_nonhom_f.p  plot_nonhom_f.plt  plot_pt_f.p  plot_pt_f.plt
(+85 files in other folders)
