INCLUDE_DIRECTORIES(${CHOLMOD_INCLUDE_DIR})

# chordal comparator app
ADD_EXECUTABLE(g2o_chordal_geodesic_comparator g2o_chordal_geodesic_comparator.cpp)
SET_TARGET_PROPERTIES(g2o_chordal_geodesic_comparator PROPERTIES OUTPUT_NAME g2o_chordal_geodesic_comparator${EXE_POSTFIX})
TARGET_LINK_LIBRARIES(g2o_chordal_geodesic_comparator core g2o_cli_library types_slam3d solver_cholmod solver_csparse)

# g2o mod app with better stats
ADD_EXECUTABLE(g2o_chordal_app g2o_chordal_app.cpp)
SET_TARGET_PROPERTIES(g2o_chordal_app PROPERTIES OUTPUT_NAME g2o_chordal_app${EXE_POSTFIX})
TARGET_LINK_LIBRARIES(g2o_chordal_app core g2o_cli_library types_slam3d solver_cholmod solver_csparse)

# chordal -> geodesic converter
ADD_EXECUTABLE(converter_geodesic2chordal converter_geodesic2chordal.cpp)
SET_TARGET_PROPERTIES(converter_geodesic2chordal PROPERTIES OUTPUT_NAME converter_geodesic2chordal${EXE_POSTFIX})
TARGET_LINK_LIBRARIES(converter_geodesic2chordal core types_slam3d)

# geodesic -> chordal converter
ADD_EXECUTABLE(converter_chordal2geodesic converter_chordal2geodesic.cpp)
SET_TARGET_PROPERTIES(converter_chordal2geodesic PROPERTIES OUTPUT_NAME converter_chordal2geodesic${EXE_POSTFIX})
TARGET_LINK_LIBRARIES(converter_chordal2geodesic core types_slam3d)

